# haskell-azure-client

./: CHANGELOG.md  LICENSE  azure-client.cabal  default.nix  input.txt  shell.nix
app/: Azure.hs  MRequest.hs  Main.hs  ResourceParser.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
