cabal-version:      3.0
name:               azure-client
version:            0.1.0.0
synopsis:
    Just a simple program that takes an input file w/ a specific format and provisions azure resources accordingly. The main focus is the http client that will auto-follow AzureAsync headers until finished

-- description:
license:            MIT
license-file:       LICENSE
author:             Seth Speaks
maintainer:         sspeaks610@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable azure-client
    import:           warnings
    main-is:          Main.hs
    other-modules:
        MRequest
        Azure
        ResourceParser
    -- other-extensions:
    build-depends:    
          base ^>=4.18.2.1
        , wreq
        , mtl
        , text
        , lens
        , parsec
        , aeson
        , bytestring
        , process
    hs-source-dirs:   app
    default-language: Haskell2010
